--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,7 +6,16 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/admin_nav_shop"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/ic_store_mall_directory_black_24dp"
+            android:title="@string/nav_shop_title" />
+        <item
+            android:id="@+id/admin_nav_statistics"
+            android:icon = "@drawable/ic_baseline_history_24"
+            android:title="@string/nav_admin_statistics"/>
+        <item
+            android:id="@+id/admin_log_out"
+            android:icon="@drawable/ic_logout"
+            android:title="Đăng xuất"/>
     </group>
+
 </menu>
