--- a/app/src/main/res/navigation/admin_navigation.xml
+++ b/app/src/main/res/navigation/admin_navigation.xml
@@ -8,5 +8,9 @@
     <fragment
         android:id="@+id/admin_nav_shop"
         android:name="com.sel.smartfood.ui.shop.ShopFragment"
-        android:label="ShopFragment" />
+        android:label="Cửa hàng" />
+    <fragment
+        android:id="@+id/admin_nav_statistics"
+        android:name="com.sel.smartfood.ui.admin.FragmentStatistics"
+        android:label="Thống kê"/>
 </navigation>
