--- a/app/src/main/res/layout/item_detail_orderhistory.xml
+++ b/app/src/main/res/layout/item_detail_orderhistory.xml
@@ -38,22 +38,30 @@
                 android:text="Tên món hàng"
                 android:textColor="#3F1AE2"
                 android:id="@+id/tv_order_history_item_name"
-                android:textSize="25sp"
+                android:textSize="35sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
             <TextView
                 android:textColor="#FF003B"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:text="số lượng đã mua"
                 android:id="@+id/tv_order_history_item_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
             <TextView
                 android:textColor="#FF003B"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:text="Tổng số tiền"
                 android:id="@+id/tv_order_history_item_total_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_gravity="center"
+                android:textSize="10sp"
+                android:id="@+id/tv_order_history_item_date"
+                android:text="Ngày đặt hàng"
+                android:textColor="#0B3ED8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
