--- a/app/src/main/res/layout/fragment_update_product.xml
+++ b/app/src/main/res/layout/fragment_update_product.xml
@@ -79,7 +79,7 @@
             android:layout_marginTop="100dp"
             android:layout_marginHorizontal="32dp"
             android:enabled="false"
-            android:textColor="@color/white"/>
+            android:textColor="#fff"/>
 
     </LinearLayout>
 </ScrollView>
