update product fragment details ui

--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -31,38 +31,34 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="20">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/tv_name_product_details"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="5"
-                android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+
+                android:layout_margin="1dp"
                 android:text="Tên sản phẩm"
                 android:textColor="#050505"
-                android:textSize="30sp"
+                android:textSize="25sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tv_price_product_details"
                 android:layout_width="wrap_content"
-                android:layout_height="0dp"
-                android:layout_weight="5"
-                android:layout_margin="10dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="1dp"
                 android:text="Giá sản phẩm"
                 android:textColor="#f20"
-                android:textSize="25sp" />
+                android:textSize="22sp" />
 
             <Spinner
                 android:background="@drawable/spinner"
                 android:layout_margin="3dp"
-                android:padding="15dp"
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textAlignment="center"
                 />
@@ -70,8 +66,7 @@
             <Button
                 android:id="@+id/btn_order"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="5"
+                android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="Thêm giỏ hàng"
                 android:textColor="#706925"
